ส่งการบ้าน ทำได้เฉพาะส่วนหัวที่เป็น nav

--- a/day2_css/index.html
+++ b/day2_css/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Workshop 1 NetSix Clone</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <header>
+        <nav>
+            <ul>
+              <li><img
+                  src="https://cdn.pic.in.th/file/picinth/Screenshot-2023-10-06-2352153a83e841b36c3010.png"
+                  alt="Screenshot-2023-10-06-2352153a83e841b36c3010.png"
+                  border="0"
+                /></li>
+              <li><a href="#"> Projeler </a></li>
+              <li><a href="#"> Galeri </a></li>
+              <li><a href="#"> Insan Kaynaklari </a></li>
+              <li><a href="#"> Hakkimizda </a></li>
+              <li><a href="#"> Haberler </a></li>
+              <li><a href="#"> Bize Ulasin </a></li>
+              <li><h2>0212 228 42 18</h2><br><p>info@enkayegyapi.com</p></li>
+            </ul>
+          </nav>
+    </header>
+    <main>
+      <div>
+        <img src="https://cdn.pic.in.th/file/picinth/Picture11.jpeg" alt="Picture11.jpeg" border="0" />
+      </div>
+    </main>
+    <footer>
+        <img src="https://cdn.pic.in.th/file/picinth/Picture10.jpeg" alt="Picture10.jpeg" border="0" />
+    </footer>
+  </body>
 </html>
