--- a/day1_html/register_form.html
+++ b/day1_html/register_form.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 2 RegisterForm</title>
-    <link rel="stylesheet" href="./styleforHW2.css">
+    <link rel="stylesheet" href="./styleforHW2.css" />
   </head>
   <body>
     <div>
       <fieldset>
         <legend>Register Form</legend>
-        <form action="">
+        <form class="register" action="#">
           <table>
             <tr>
               <td>
                 <p>Firstname:</p>
               </td>
               <td>
-                <input type="text" />
+                <input class="textinput" type="text" />
               </td>
             </tr>
             <tr>
@@ -25,7 +25,7 @@
                 <p>Lastname:</p>
               </td>
               <td>
-                <input type="text" />
+                <input class="textinput" type="text" />
               </td>
             </tr>
             <tr>
@@ -33,7 +33,7 @@
                 <p>Password:</p>
               </td>
               <td>
-                <input type="password" />
+                <input class="textinput" type="password" />
               </td>
             </tr>
             <tr>
@@ -41,7 +41,7 @@
                 <p>Confirm Password:</p>
               </td>
               <td>
-                <input type="password" />
+                <input class="textinput" type="password" />
               </td>
             </tr>
             <tr>
@@ -49,7 +49,7 @@
                 <p>Email:</p>
               </td>
               <td>
-                <input type="email" />
+                <input class="textinput" type="email" />
               </td>
             </tr>
             <tr>
@@ -57,7 +57,7 @@
                 <p>Confirm Email:</p>
               </td>
               <td>
-                <input type="email" />
+                <input class="textinput" type="email" />
               </td>
             </tr>
             <tr>
@@ -65,7 +65,81 @@
                 <p>Birthday:</p>
               </td>
               <td>
-                <!-- รอใส่ input -->
+                <select id="day" name="day">
+                  <option value="">1</option>
+                  <option value="">2</option>
+                  <option value="">3</option>
+                  <option value="">4</option>
+                  <option value="">5</option>
+                  <option value="">6</option>
+                  <option value="">7</option>
+                  <option value="">8</option>
+                  <option value="">9</option>
+                  <option value="">10</option>
+                  <option value="">11</option>
+                  <option value="">12</option>
+                  <option value="">13</option>
+                  <option value="">14</option>
+                  <option value="">15</option>
+                  <option value="">16</option>
+                  <option value="">17</option>
+                  <option value="">18</option>
+                  <option value="">19</option>
+                  <option value="">20</option>
+                  <option value="">21</option>
+                  <option value="">22</option>
+                  <option value="">23</option>
+                  <option value="">24</option>
+                  <option value="">25</option>
+                  <option value="">26</option>
+                  <option value="">27</option>
+                  <option value="">28</option>
+                  <option value="">29</option>
+                  <option value="">30</option>
+                  <option value="">31</option>
+                </select>
+                <select id="day" name="day">
+                  <option value="">1</option>
+                  <option value="">2</option>
+                  <option value="">3</option>
+                  <option value="">4</option>
+                  <option value="">5</option>
+                  <option value="">6</option>
+                  <option value="">7</option>
+                  <option value="">8</option>
+                  <option value="">9</option>
+                  <option value="">10</option>
+                  <option value="">11</option>
+                  <option value="">12</option>
+                </select>
+                <select id="day" name="day">
+                  <option value="">1980</option>
+                  <option value="">1981</option>
+                  <option value="">1982</option>
+                  <option value="">1983</option>
+                  <option value="">1984</option>
+                  <option value="">1985</option>
+                  <option value="">1986</option>
+                  <option value="">1987</option>
+                  <option value="">1988</option>
+                  <option value="">1989</option>
+                  <option value="">1990</option>
+                  <option value="">1991</option>
+                  <option value="">1992</option>
+                  <option value="">1993</option>
+                  <option value="">1994</option>
+                  <option value="">1995</option>
+                  <option value="">1996</option>
+                  <option value="">1997</option>
+                  <option value="">1998</option>
+                  <option value="">1999</option>
+                  <option value="">2000</option>
+                  <option value="">2001</option>
+                  <option value="">2002</option>
+                  <option value="">2003</option>
+                  <option value="">2004</option>
+                  <option value="">2005</option>
+                </select>
               </td>
             </tr>
             <tr>
@@ -73,20 +147,17 @@
                 <p>Gender:</p>
               </td>
               <td>
-                <p> <input type="radio" /> Male </p>
-                <p> <input type="radio" /> Female </p>
+                <input type="radio" id="Male" name="gender" value="Male" />
+                <label for="Male">Male</label>
+                <input type="radio" id="Female" name="gender" value="Female" />
+                <label for="Female">Female</label>
               </td>
             </tr>
           </table>
-  
-          Birthday:
-          <input type="date" name="ConfirmEmail" /> <br />
-          <!-- Gender
-          <input type="radio" name="Gender" value="1" /> Male
-          <input type="radio" name="Gender" value="2" /> Female
-          <br /> -->
-          <input type="submit" />
-          <input type="reset" />
+          <div class="button">
+            <input style="margin-right: 3px;" type="submit" value="Submit" />
+            <input style="margin-left: 3px;" type="reset" value="Reset" />
+          </div>
         </form>
       </fieldset>
     </div>
