Edit radio button ให้เลือก Male ค้างไว้

--- a/day1_html/register_form.html
+++ b/day1_html/register_form.html
@@ -147,7 +147,7 @@
                 <p>Gender:</p>
               </td>
               <td>
-                <input type="radio" id="Male" name="gender" value="Male" />
+                <input type="radio" id="Male" name="gender" value="Male" checked />
                 <label for="Male">Male</label>
                 <input type="radio" id="Female" name="gender" value="Female" />
                 <label for="Female">Female</label>
