--- a/day2_css/index.html
+++ b/day2_css/index.html
@@ -8,30 +8,80 @@
   </head>
   <body>
     <header>
-        <nav>
-            <ul>
-              <li><img
-                  src="https://cdn.pic.in.th/file/picinth/Screenshot-2023-10-06-2352153a83e841b36c3010.png"
-                  alt="Screenshot-2023-10-06-2352153a83e841b36c3010.png"
-                  border="0"
-                /></li>
-              <li><a href="#"> Projeler </a></li>
-              <li><a href="#"> Galeri </a></li>
-              <li><a href="#"> Insan Kaynaklari </a></li>
-              <li><a href="#"> Hakkimizda </a></li>
-              <li><a href="#"> Haberler </a></li>
-              <li><a href="#"> Bize Ulasin </a></li>
-              <li><h2>0212 228 42 18</h2><br><p>info@enkayegyapi.com</p></li>
-            </ul>
-          </nav>
+      <nav>
+        <div class="logo">
+          <img src="./img/logo.png" alt="logo" />
+        </div>
+        <ul>
+          <li><a href="#"> Projeler </a></li>
+          <li><a href="#"> Galeri </a></li>
+          <li><a href="#"> Insan Kaynaklari </a></li>
+          <li><a href="#"> Hakkimizda </a></li>
+          <li><a href="#"> Haberler </a></li>
+          <li><a href="#"> Bize Ulasin </a></li>
+        </ul>
+        <div class="contact">
+          <h2>0212 228 42 18</h2>
+          <p>info@enkayegyapi.com</p>
+        </div>
+      </nav>
     </header>
     <main>
       <div>
-        <img src="https://cdn.pic.in.th/file/picinth/Picture11.jpeg" alt="Picture11.jpeg" border="0" />
+        <img src="./img/Pic2.png" alt="Pic2" />
+      </div>
+      <div class="text">
+        <h1>Vizyon & Misyon</h1>
+        <br />
+        <p class="text1">
+          Enkay Ege Yapigrup olarak vizyonumuz teknolojinin akll kullanimiyla,
+          modern mimari anlayisiyla, kaliteyi takip eden degil, kaliteyi ureten
+          olmaktir. insanlarin yasam standartlarini yukseltmek baslica
+          ilkemizdir.
+        </p>
+        <br />
+        <p class="text2">
+          Onceligimiz; bilgi birikimimiz ve tecrubemizle, yaptigimiz isleri
+          zamaninda ve kaliteden odun vermeden surdurmektir. Enkay Ege Yapigrup
+          olarak hedefimiz; dogruluktan ve durustlukten taviz vermeden,
+          toplumsal yasam standartlarinin gelistirilmesini saglama; ulkemizin en
+          onemli sorunlarindan biri olan carpik kentlesmenin onlenmesi amaciyla
+          kentsel donusum projelerine destek vermektir.
+        </p>
       </div>
     </main>
     <footer>
-        <img src="https://cdn.pic.in.th/file/picinth/Picture10.jpeg" alt="Picture10.jpeg" border="0" />
+      <div class="card1">
+        <center><img src="./img/card1.png" alt="card1"/></center>
+        <br />
+        <h3>Yatirm Danismanlig</h3>
+        <br>
+        <p align = 'center'>Size ozel gayrimenkul planlamasi ile hayalleriniz gercek olsun.</p>
+      </div>
+      <div class="card2">
+        <center><img src="./img/card2.png" alt="card2"/></center>
+        <br />
+        <h3>Proje Ozel Bilgilendirme</h3>
+        <br>
+        <p align = 'center'>Satistaki tum projelerimiz icin detayli bilgilendirme servisi</p>
+      </div>
+      <div class="card3">
+        <center><img src="./img/card3.png" alt="card3"/></center>
+        <br />
+        <h3>Yatirim isbirlikleri</h3>
+        <br>
+        <p align = 'center'>Sermayenizi en iyi yatirim araci
+          olan gayrimenkul ile
+          gelistiriyoruz.</p>
+      </div>
+      <div class="card4">
+        <center><img src="./img/card4.png" alt="card4"/></center>
+        <br />
+        <h3>Kurumsal Cozumler</h3>
+        <br>
+        <p align = 'center'>Markalariniza ozel ticari alanlar
+          uretmek icin ozel danismanlik.</p>
+      </div>
     </footer>
   </body>
 </html>
