--- a/day3_tailwind/index.html
+++ b/day3_tailwind/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework_Tailwind</title>
+    <title>Homework_Tailwind_1</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss"></style>
   </head>
