--- a/day3_tailwind/index.html
+++ b/day3_tailwind/index.html
@@ -16,15 +16,15 @@
           </div>
           <div>
             <ul class="flex flex-row justify-between text-white text-xs font-bold">
-              <li><a href="#" class="hover:text-slate-200 p-2"> Projeler </a></li>
-              <li><a href="#" class="hover:text-slate-200 p-2"> Galeri </a></li>
+              <li><a href="#" class="max-xl:text-sm text-xl hover:text-slate-200 p-2"> Projeler </a></li>
+              <li><a href="#" class="max-xl:text-sm text-xl hover:text-slate-200 p-2"> Galeri </a></li>
               <li>
-                <a href="#" class="hover:text-slate-200 p-2"> Insan Kaynaklari </a>
+                <a href="#" class="max-xl:text-sm text-xl hover:text-slate-200 p-2"> Insan Kaynaklari </a>
               </li>
-              <li><a href="#" class="hover:text-slate-200 p-2"> Hakkimizda </a></li>
-              <li><a href="#" class="hover:text-slate-200 p-2"> Haberler </a></li>
+              <li><a href="#" class="max-xl:text-sm text-xl hover:text-slate-200 p-2"> Hakkimizda </a></li>
+              <li><a href="#" class="max-xl:text-sm text-xl hover:text-slate-200 p-2"> Haberler </a></li>
               <li>
-                <a href="#" class="hover:text-slate-200 p-2"> Bize Ulasin </a>
+                <a href="#" class="max-xl:text-sm text-xl hover:text-slate-200 p-2"> Bize Ulasin </a>
               </li>
             </ul>
           </div>
